--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -59,7 +59,7 @@
 
 
 <div class="card gedf-card post-list"  *ngIf="isComment==false">
-    <div class="card-header">
+    <div class="card-header post-header">
         <div class="d-flex justify-content-between align-items-center">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="mr-2">
@@ -162,7 +162,7 @@
 
 
         <ng-container *ngIf="showCommentInput">
-            <div class="row">
+            <div class="row post-comment-section">
                 <div class="card gedf-card">
                     <!--<div class="card-header">
                         <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
@@ -346,7 +346,7 @@
 
 
         <ng-container *ngIf="showCommentInput">
-            <div class="row">
+            <div class="row reply-section">
                 <div class="card gedf-card">
                    <div class="card-body">
                         <div class="tab-content" id="myTabContent">
