--- a/src/styles.css
+++ b/src/styles.css
@@ -10089,8 +10089,8 @@ aside.sidebar.full-style {
 }
 
 .profile-pills{
-    background-color: rgba(0,0,0,0.07);
-    border: 0.5px solid rgba(0,0,0,0.07);
+    background-color: #FBFCFC;
+    border: 1px solid rgba(0,0,0,0.07);
     border-radius: 5px;
   }
 
@@ -10105,3 +10105,9 @@ aside.sidebar.full-style {
    .all-posts{
        background-color: white;
    }
+ .reply-section{
+    margin: 15px 0px 0px 0px;
+  }
+.list-group-item.active{
+    background-color: none !important;
+}
