--- a/src/app/components/user/user/user2.component.css
+++ b/src/app/components/user/user/user2.component.css
@@ -174,6 +174,9 @@ li {
 .pointer {
     cursor: pointer;
 }
+.followers-button{
+    border-radius: 25px;
+}
 /*Profile Pic Start*/
 .picture-container{
     position: relative;
