--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,7 +21,13 @@ a {
 }
 
 .ng-autocomplete{
-    width: 550px;
+    width: 400px;
+}
+.createpage-option{
+    display: block;
+}
+.dropdown{
+  margin-left: 10px;
 }
 
 .mylogo {
@@ -40,7 +46,7 @@ a {
 
 .container-fluid {
     /*max-width: 1100px;*/
-    width: 100%;
+    width: 97%;
     margin: 0 auto;
 }
 
