--- a/src/app/components/user/user/user2.component.css
+++ b/src/app/components/user/user/user2.component.css
@@ -90,9 +90,9 @@ li {
     bottom: 20px;
 }
 
-.user-profile-2 {
+/* .user-profile-2 {
     margin-top: 50px;
-}
+} */
 
 .user-profile-sidebar {
     margin: 0 0 20px 0;
@@ -248,6 +248,9 @@ input[type="file"] {
         z-index: 100;
         left: 225px;
         top: 355px;
+    }
+    .personal-info{
+        margin-top: 100px;
     }
 }
 .active-tab{
